crates/alder-parse/src/expression/snapshots/alder_parse__expression__list__tests__error_tab.snap
---
source: crates/alder-parse/src/expression/list.rs
description: "Code:\n\n[1,\t2]"
---
List(
    Space(
        HasTab,
        1,
        4,
    ),
    1,
    1,
)
