crates/alder-parse/src/expression/snapshots/alder_parse__expression__list__tests__error_unclosed.snap
---
source: crates/alder-parse/src/expression/list.rs
description: "Code:\n\n[1, 2"
---
List(
    End(
        1,
        6,
    ),
    1,
    1,
)
