crates/alder-parse/src/expression/snapshots/alder_parse__expression__list__tests__nested.snap
---
source: crates/alder-parse/src/expression/list.rs
description: "Code:\n\n[[1], [2, 3]]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: List(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 3,
                                },
                                end: Position {
                                    line: 1,
                                    column: 4,
                                },
                            },
                            value: Int(
                                1,
                            ),
                        },
                    ],
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 13,
                    },
                },
                value: List(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            value: Int(
                                2,
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 11,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: Int(
                                3,
                            ),
                        },
                    ],
                ),
            },
        ],
    ),
}
