crates/alder-parse/src/expression/snapshots/alder_parse__expression__list__tests__single.snap
---
source: crates/alder-parse/src/expression/list.rs
description: "Code:\n\n[1]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Int(
                    1,
                ),
            },
        ],
    ),
}
